Added EntityFrameworkCore And Scaffolded Database

--- a/BookStoreApp.Api/appsettings.json
+++ b/BookStoreApp.Api/appsettings.json
@@ -6,6 +6,11 @@
   //  }
   //},
 
+  // Connection Strings - Here i Precise to which db i am suing, various other parameters
+  "ConnectionString": {
+    "BookStoreAppDbConnection": "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   // Setting the parameters for Serilog - Sorta How it should behave.
   "Serilog": {
     "MinimumLevel": {
@@ -25,9 +30,9 @@
       },
       {
         "Name": "Seq",
-        "Args": {"serverUrl": "http://localhost:5341"}
+        "Args": { "serverUrl": "http://localhost:5341" }
       }
-    ]    
+    ]
   },
   "AllowedHosts": "*"
 }
