Completed Author API Setup

--- a/BookStoreApp.Api/appsettings.json
+++ b/BookStoreApp.Api/appsettings.json
@@ -6,10 +6,13 @@
   //  }
   //},
 
-  // Connection Strings - Here i Precise to which db i am suing, various other parameters
-  "ConnectionString": {
-    "BookStoreAppDbConnection": "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  // Connection Strings - Here i Precise to which db i am connecting + various other parameters
+  "ConnectionStrings": {
+    // original con string
+    //"BookStoreAppDbConnection": "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+    "BookStoreAppDbConnection": "Server=DESKTOP-85JH2K6\\SQLEXPRESS;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
 
   // Setting the parameters for Serilog - Sorta How it should behave.
   "Serilog": {
