Finish Configuring Authentication and Identily

--- a/BookStoreApp.Api/appsettings.json
+++ b/BookStoreApp.Api/appsettings.json
@@ -37,5 +37,10 @@
       }
     ]
   },
+  "JwtSettings": {
+    "Issuer": "BookStoreAPI", // Who give out the Token Key
+    "Audience": "BookStoreApiClient", // Consumer of API Key
+    "Duration": 1 
+  },
   "AllowedHosts": "*"
 }
